--- a/style.css
+++ b/style.css
@@ -38,10 +38,6 @@
 .header__logo {
    width: 122px;
    height: 24px;
-   background-image: url(./images/header__logo.svg);
-   background-size: contain;
-   background-repeat: no-repeat;
-   margin-top: 7px;
 }
 
 .header__nav {
@@ -64,6 +60,9 @@
    line-height: 24px;
    text-transform: uppercase;
    margin-right: 20px;
+}
+.header__link:last-child {
+   margin-right: 0;
 }
 
 .header__link:hover {
@@ -147,6 +146,7 @@
    line-height: 48px;
    text-transform: uppercase;
    margin-top: 48px;
+   text-decoration: none;
 }
 
 .lead__button:hover {
@@ -446,6 +446,7 @@
    background-color: rgba(0,0,0,0.4);
 }
 .testimonials__info {
+   width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -758,4 +759,162 @@
    line-height: 48px;
    text-transform: uppercase;
    padding: 0px 41px;
+}
+.newsletter__button_type_subscribe:hover {
+   cursor: pointer;
+   opacity: .5;
+}
+.footer {
+   height: 120px;
+   margin: 0 auto;
+   display: flex;
+}
+.footer__container {
+   display: flex;
+   flex-direction: row;
+   background-color: #000;
+   width: 100%;
+   justify-content: space-between;
+   padding: 48px 160px;
+}
+.footer__copyrigt {
+   font-style: normal;
+   font-weight: 400;
+   font-size: 12px;
+   line-height: 24px;
+   margin: 0;
+}
+.footer__links-container {
+   width: 335px;
+   max-width: 335px;
+}
+.footer__links-list {
+   display: flex;
+   flex-direction: row;
+   list-style-type: none;
+   justify-content: space-between;
+   padding: 0;
+   margin: 0;
+}
+.footer__link {
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 24px;
+   text-align: center;
+}
+.footer__link:hover {
+   cursor: pointer;
+   opacity: .5;
+}
+.footer__socials-container {
+   width: 124px;
+   max-width: 124px;
+}
+.footer__socials-list {
+   padding: 0;
+   margin: 0;
+   display: flex;
+   flex-direction: row;
+   list-style-type: none;
+   justify-content: space-between;
+}
+.footer__socials {
+   background-color: rgba(217, 217, 217, 0.1);
+   border-radius: 50%;
+   height: 24px;
+   width: 24px;
+   position: relative;
+}
+.footer__social {
+   font-weight: 400;
+   font-size: 8px;
+   line-height: 24px;
+   position: absolute;
+   left: 30%;
+}
+.footer__socials:hover {
+   cursor: pointer;
+   opacity: .5;
+}
+
+.testimonials__slider {
+   height: 100%;
+   width: 100%;
+   position: relative;
+   overflow: hidden;
+   display: flex;
+   flex-flow: row nowrap;
+   align-items: flex-end;
+   justify-content: center;
+}
+.testimonials__radio-button {
+   width: 11px;
+   height: 11px;
+   margin: 5px;
+   border-radius: 50%;
+   outline: 1px solid #fff;
+   cursor: pointer;
+   appearance: none;
+}
+.testimonials__radio-button:checked {
+   animation: check 0.4s linear forwards;
+}
+.testimonials__radio-button:checked:nth-of-type(1) ~ .testimonials__inner {
+   left: 0%;
+}
+.testimonials__radio-button:checked:nth-of-type(2) ~ .testimonials__inner {
+   left: -100%;
+}
+.testimonials__radio-button:checked:nth-of-type(3) ~ .testimonials__inner {
+   left: -200%;
+}
+.testimonials__radio-button:checked:nth-of-type(4) ~ .testimonials__inner {
+   left: -300%;
+}
+.testimonials__inner {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 300%;
+   transition: left 0.4s;
+   display: flex;
+   flex-flow: row nowrap;
+}
+.testimonials__contents {
+   height: 100%;
+   text-align: center;
+   display: flex;
+   flex: 1;
+   flex-flow: column nowrap;
+   align-items: center;
+   justify-content: center;
+}
+.testimonials__text {
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 24px;
+   text-align: center;
+   margin: 0 auto;
+}
+.testimonials__author {
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 24px;
+   text-align: center;
+   margin: 0 auto;
+   margin-top: 24px;
+}
+
+@keyframes check {
+   50% {
+      background-color: #fff;
+   }
+   100% {
+      background-color: #fff;
+      box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+   }
 }
